--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <div class="section_inner">
                 <div class="box_layout">
                     <div class="img">
-                        <img src="" alt="">
+                        <img src="/resource/images/img_main01.png" alt="">
                     </div>
                     <div class="box_form">
                         <h2>우리아이 보험료 비교 신청하기</h2>
@@ -48,13 +48,11 @@
                         </div>
                         <div class="grp_form">
                             <p class="tit">성별</p>
-                            <div class="grp_input">
-                                <div class="grp_radio">
-                                    <input type="radio" name="radio02" id="radio03">
-                                    <label for="radio03">남자 아이</label>
-                                    <input type="radio" name="radio02" id="radio04">
-                                    <label for="radio04">여자 아이</label>
-                                </div>
+                            <div class="grp_radio">
+                                <input type="radio" name="radio02" id="radio03">
+                                <label for="radio03">남자 아이</label>
+                                <input type="radio" name="radio02" id="radio04">
+                                <label for="radio04">여자 아이</label>
                             </div>
                         </div>
                         <div class="grp_form">
