--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <title>PETPRO</title>
 </head>
 <body>
-    <div class="wrap">
+    <div class="wrap main">
         <header>
             <div class="header_inner">
                 <h1 class="logo"><a href="main.html">PETPRO</a></h1>
@@ -90,66 +90,78 @@
             <h2>펫보험 종류</h2>
             <ul class="list_main type01">
                 <li>
-                    <div class="grp_badge">
-                        <span class="badge">의료실비</span>
-                    </div>
-                    <p>동물병원<br>
-                        치료비 보장<br>
-                        연간 최대 2500만 한도<br>
-                        최대 100% 보장</p>
-                    <a href="#">상담 신청하기</a>
+                    <a href="#">
+                        <div class="grp_badge">
+                            <span class="badge">의료실비</span>
+                        </div>
+                        <p class="tit">동물병원<br>
+                            치료비 보장<br>
+                            연간 최대 2500만 한도<br>
+                            최대 100% 보장</p>
+                        <p class="arrow">상담 신청하기</p>
+                    </a>
                 </li>
                 <li>
-                    <div class="grp_badge">
-                        <span class="badge">의료실비</span>
-                        <span class="badge">양육자금</span>
-                    </div>
-                    <p>보호자 사망 시 <br>
-                        아이들 양육자금까지<br>
-                        보장</p>
-                    <a href="#">상담 신청하기</a>
+                    <a href="#">
+                        <div class="grp_badge">
+                            <span class="badge">의료실비</span>
+                            <span class="badge">양육자금</span>
+                        </div>
+                        <p class="tit">보호자 사망 시 <br>
+                            아이들 양육자금까지<br>
+                            보장</p>
+                        <p class="arrow">상담 신청하기</p>
+                    </a>
                 </li>
                 <li>
-                    <div class="grp_badge">
-                        <span class="badge">의료실비</span>
-                        <span class="badge">양육자금</span>
-                        <span class="badge">돌봄비용</span>
-                    </div>
-                    <p>보호자가 상해 또는 <br>
-                        질병으로<br>
-                        입원 시<br>
-                        우리 아이 <br>
-                        돌봄비용 지원</p>
-                    <a href="#">상담 신청하기</a>
+                    <a href="#">
+                        <div class="grp_badge">
+                            <span class="badge">의료실비</span>
+                            <span class="badge">양육자금</span>
+                            <span class="badge">돌봄비용</span>
+                        </div>
+                        <p class="tit">보호자가 상해 또는 <br>
+                            질병으로<br>
+                            입원 시<br>
+                            우리 아이 <br>
+                            돌봄비용 지원</p>
+                        <p class="arrow">상담 신청하기</p>
+                    </a>
                 </li>
                 <li>
-                    <div class="grp_badge">
-                        <span class="badge">의료실비</span>
-                        <span class="badge">보호자 상해</span>
-                    </div>
-                    <p>우리 아이 보험 <br>
-                        플러스 <br>
-                        보호자님 <br>
-                        상해보험까지</p>
-                    <a href="#">상담 신청하기</a>
+                    <a href="#">
+                        <div class="grp_badge">
+                            <span class="badge">의료실비</span>
+                            <span class="badge">보호자 상해</span>
+                        </div>
+                        <p class="tit">우리 아이 보험 <br>
+                            플러스 <br>
+                            보호자님 <br>
+                            상해보험까지</p>
+                        <p class="arrow">상담 신청하기</p>
+                    </a>
                 </li>
             </ul>
         </article>
         <article>
             <ul class="list_main type02">
                 <li>
-                    <a href="#">펫보험 비교센터</a>
-                    <p class="tit">‘펫보험 꼭 비교해야 할까요?’<br>
-                        비교는 선택이 아닌 필수!</p>
-                    <p>아이들 품종, 나이, 성별, 과거 질병에 따라<br>
-                        보험사 별 보험료 및 보상 절차가 다릅니다.</p>
+                    <a href="#">
+                        <p class="arrow">펫보험 비교센터</p>
+                        <p class="tit">‘펫보험 꼭 비교해야 할까요?’<br>
+                            비교는 선택이 아닌 필수!</p>
+                        <p class="txt_sub">아이들 품종, 나이, 성별, 과거 질병에 따라<br>
+                            보험사 별 보험료 및 보상 절차가 다릅니다.</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#">보상안내 센터</a>
-                    <p class="tit">펫프로를 통해 보험가입하신<br>
-                        보호자님을 위한<br>
-                        보상청구 안내 및 접수센터</p>
-                    <p>보험청구 전 꼭 펫프로 담당자와 상의해 주세요</p>
+                    <a href="#">
+                        <p class="arrow">보상안내 센터</p>
+                        <p class="tit">펫프로를 통해 보험가입하신<br>
+                            보호자님을 위한<br>
+                            보상청구 안내 및 접수센터</p>
+                        <p class="txt_sub">보험청구 전 꼭 펫프로 담당자와 상의해 주세요</p>
+                    </a>
                 </li>
             </ul>
         </article>
@@ -157,22 +169,28 @@
             <article>
                 <ul class="list_main type03">
                     <li>
-                        <a href="#">펫보험 Q&A</a>
-                        <p class="tit">펫보험 가입 시<br>
-                            보장되지 않는<br>
-                            내용이 있나요?</p>
+                        <a href="#">
+                            <p class="arrow">펫보험 Q&A</p>
+                            <p class="tit">펫보험 가입 시<br>
+                                보장되지 않는<br>
+                                내용이 있나요?</p>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">펫프로 보상사례</a>
-                        <p class="tit">펫프로를 통해 가입한<br>
-                            아이들은 어떻게<br>
-                            보상을 받았을까요?</p>
+                        <a href="#">
+                            <p class="arrow">펫프로 보상사례</p>
+                            <p class="tit">펫프로를 통해 가입한<br>
+                                아이들은 어떻게<br>
+                                보상을 받았을까요?</p>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">보험상담 비교예시</a>
-                        <p class="tit">방광 결석이 생긴<br>
-                            3살 말티즈 아이의<br>
-                            보험 비교 내용</p>
+                        <a href="#">
+                            <p class="arrow">보험상담 비교예시</p>
+                            <p class="tit">방광 결석이 생긴<br>
+                                3살 말티즈 아이의<br>
+                                보험 비교 내용</p>
+                        </a>
                     </li>
                 </ul>
             </article>
@@ -180,44 +198,50 @@
                 <h2>보호자를 위한 보험 추천</h2>
                 <ul class="list_main type04">
                     <li>
-                        <a href="#">법률 보험</a>
-                        <p>아이들과 생활할 때<br>
-                            분쟁 해결을 위한<br>
-                            <strong>변호사 선임 및 법률비용 지원</strong></p>
+                        <a href="#">
+                            <p class="arrow">법률 보험</p>
+                            <p>아이들과 생활할 때<br>
+                                분쟁 해결을 위한<br>
+                                <strong>변호사 선임 및 법률비용 지원</strong></p>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">주택 화재</a>
-                        <p>보호자가 없을 때<br>
-                            우리 아이들 사고로 <br>
-                            <strong>집안에 화재가 발생한다면?</strong></p>
+                        <a href="#">
+                            <p class="arrow">주택 화재</p>
+                            <p>보호자가 없을 때<br>
+                                우리 아이들 사고로 <br>
+                                <strong>집안에 화재가 발생한다면?</strong></p>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">보호자 보험 보장분석</a>
-                        <p><strong>가입하신 보험</strong>을
-                            상세하게 <strong>분석</strong>해 드려요</p>
+                        <a href="#">
+                            <p class="arrow">보호자 보험 보장분석</p>
+                            <p><strong>가입하신 보험</strong>을<br>
+                                상세하게 <strong>분석</strong>해 드려요</p>
+                        </a>
                     </li>
                 </ul>
             </article>
-            <article>
+            <article class="box_logo">
                 <ul class="list_logo">
                     <li>
-                        <div class="badge"><img src="" alt=""></div>
+                        <div class="badge"><img src="/resource/images/img_logo01.svg" alt=""></div>
                         <p>위풍댕댕</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="" alt=""></div>
+                        <div class="badge"><img src="/resource/images/img_logo02.svg" alt=""></div>
                         <p>금쪽같은 펫보험</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="" alt=""></div>
+                        <div class="badge"><img src="/resource/images/img_logo03.svg" alt=""></div>
                         <p>펫블리</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="" alt=""></div>
+                        <div class="badge"><img src="/resource/images/img_logo04.svg" alt=""></div>
                         <p>하이펫</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="" alt=""></div>
+                        <div class="badge"><img src="/resource/images/img_logo05.svg" alt=""></div>
                         <p>펫퍼민트</p>
                     </li>
                 </ul>
