--- a/main.html
+++ b/main.html
@@ -24,15 +24,44 @@
                         <a href="#" id="">사은품</a>
                     </nav>
                     <a href="#" class="btn_chat">채팅상담</a>
+                    <button class="btn_menu"></button>
                 </div>
             </div>
         </header>
         <section class="sec_main01">
             <div class="section_inner">
                 <div class="box_layout">
-                    <div class="img">
-                        <img src="/resource/images/img_main01.png" alt="">
+                    <!-- Swiper JS -->
+                    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+                    <div class="swiper mySwiper img">
+                        <ul class="swiper-wrapper">
+                            <li class="swiper-slide">
+                                <img src="/resource/images/img_main01.png" alt="">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="/resource/images/img_main01.png" alt="">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="/resource/images/img_main01.png" alt="">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="/resource/images/img_main01.png" alt="">
+                            </li>
+                        </ul>
+                        <div class="swiper-pagination"></div>
                     </div>
+                    <!-- Initialize Swiper -->
+                    <script>
+                        var swiper = new Swiper(".mySwiper", {
+                            slidesPerView: 'auto',
+                            initialSlide: 0,
+                            spaceBetween: 50,
+                            pagination: {
+                            el: ".swiper-pagination",
+                            clickable: true,
+                            },
+                        });
+                    </script>
                     <div class="box_form">
                         <h2>우리아이 보험료 비교 신청하기</h2>
                         <p class="tit_sub">펫보험을 상세하게 비교해 드릴게요.<br>
@@ -121,8 +150,7 @@
                             <span class="badge">돌봄비용</span>
                         </div>
                         <p class="tit">보호자가 상해 또는 <br>
-                            질병으로<br>
-                            입원 시<br>
+                            질병으로 입원 시<br>
                             우리 아이 <br>
                             돌봄비용 지원</p>
                         <p class="arrow">상담 신청하기</p>
