--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <h1 class="logo"><a href="main.html">PETPRO</a></h1>
                 <div class="right">
                     <nav class="grp_link">
-                        <a href="main2.html" id="">펫보험 비교</a>
+                        <a href="sub01_1-1.html" id="">펫보험 비교</a>
                         <a href="main3.html" id="">보상문의</a>
                         <a href="main4.html" id="">광고파트너</a>
                         <a href="#" id="">사은품</a>
