--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="grp_form check">
-                            <p>비교 신청하기 내용은 카카오톡 채팅으로 안내드릴게요</p>
+                            <p class="tac">비교 신청하기 내용은 카카오톡 채팅으로 안내드릴게요</p>
                             <div class="grp_check tac">
                                 <input type="checkbox" name="check01" id="check01">
                                 <label for="check01">개인정보 수집·이용 동의</label>
