--- a/sub01_1-1.html
+++ b/sub01_1-1.html
@@ -35,7 +35,7 @@
         <section class="tab_wrap">
             <div class="section_inner">
                 <ul >
-                    <li>
+                    <li class="on">
                         <a href="#">
                             <div class="grp_badge">
                                 <span class="badge">의료실비</span>
@@ -89,7 +89,7 @@
         <section class="cont_wrap">
             <div class="section_inner">
                 <div class="box_layout">
-                    <div>
+                    <div class="box_text">
                         <h2>의료실비</h2>
                         <p>Lorem ipsum dolor sit amet consectetur. Feugiat nisi vehicula ultricies tortor scelerisque tristique tortor. Nisl cursus facilisis tellus commodo faucibus. Porta condimentum neque nibh at vel. Pellentesque gravida et vitae ultricies mauris non donec mi est. Quis magna amet viverra auctor ut et justo. Pellentesque enim est lacus vulputate orci feugiat elementum. Ut tristique metus et leo sapien est amet dolor. Lorem porttitor suscipit volutpat viverra leo odio sed eu tellus.</p>
                         <p>Lorem ipsum dolor sit amet consectetur. Feugiat nisi vehicula ultricies tortor scelerisque tristique tortor. Nisl cursus facilisis tellus commodo faucibus. Porta condimentum neque nibh at vel. Pellentesque gravida et vitae ultricies mauris non donec mi est. Quis magna amet viverra auctor ut et justo. Pellentesque enim est lacus vulputate orci feugiat elementum. Ut tristique metus et leo sapien est amet dolor. Lorem porttitor suscipit volutpat viverra leo odio sed eu tellus.
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="grp_form check">
-                            <p>비교 신청하기 내용은 카카오톡 채팅으로 안내드릴게요</p>
+                            <p class="tac">비교 신청하기 내용은 카카오톡 채팅으로 안내드릴게요</p>
                             <div class="grp_check tac">
                                 <input type="checkbox" name="check01" id="check01">
                                 <label for="check01">개인정보 수집·이용 동의</label>
