인덱스 수정

--- a/sub_compare01-1.html
+++ b/sub_compare01-1.html
@@ -22,9 +22,9 @@
                 <h1 class="logo"><a href="main.html">PETPRO</a></h1>
                 <div class="right">
                     <nav class="grp_link">
-                        <a href="main2.html" id="">펫보험 비교</a>
-                        <a href="main3.html" id="">보상문의</a>
-                        <a href="main4.html" id="">광고파트너</a>
+                        <a href="sub_compare01-1.html" id="">펫보험 비교</a>
+                        <a href="#" id="">보상문의</a>
+                        <a href="#" id="">광고파트너</a>
                         <a href="#" id="">사은품</a>
                     </nav>
                     <a href="#" class="btn_chat">채팅상담</a>
@@ -36,7 +36,7 @@
             <div class="section_inner">
                 <ul >
                     <li class="on">
-                        <a href="#">
+                        <a href="sub_compare01-1.html">
                             <div class="grp_badge">
                                 <span class="badge">의료실비</span>
                             </div>
