--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="logo"><a href="main.html">PETPRO</a></h1>
                 <div class="right">
                     <nav class="grp_link">
-                        <a href="sub_compare01-1.html" id="">펫보험 비교</a>
+                        <a href="compare01-1.html" id="">펫보험 비교</a>
                         <a href="#" id="">보상문의</a>
                         <a href="#" id="">광고파트너</a>
                         <a href="#" id="">사은품</a>
@@ -73,7 +73,7 @@
                         <div class="grp_form">
                             <p class="tit">사랑하는 우리 아이는</p>
                             <div class="grp_radio img">
-                                <input type="radio" name="radio01" id="radio01">
+                                <input type="radio" name="radio01" id="radio01" checked>
                                 <label for="radio01">강아지</label>
                                 <input type="radio" name="radio01" id="radio02">
                                 <label for="radio02">고양이</label>
@@ -82,7 +82,7 @@
                         <div class="grp_form">
                             <p class="tit">성별</p>
                             <div class="grp_radio">
-                                <input type="radio" name="radio02" id="radio03">
+                                <input type="radio" name="radio02" id="radio03" checked>
                                 <label for="radio03">남자 아이</label>
                                 <input type="radio" name="radio02" id="radio04">
                                 <label for="radio04">여자 아이</label>
