--- a/compare01-1.html
+++ b/compare01-1.html
@@ -44,7 +44,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="compare02-1.html">
                             <div class="grp_badge">
                                 <span class="badge">의료실비</span>
                                 <span class="badge">양육자금</span>
@@ -54,7 +54,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="compare03-1.html">
                             <div class="grp_badge">
                                 <span class="badge">의료실비</span>
                                 <span class="badge">양육자금</span>
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="compare04-1.html">
                             <div class="grp_badge">
                                 <span class="badge">의료실비</span>
                                 <span class="badge">보호자 상해</span>
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="compare05-1.html">
                             <div class="grp_badge">
                                 <span class="badge">견종별 보험</span>
                             </div>
