--- a/compare01-1.html
+++ b/compare01-1.html
@@ -19,7 +19,7 @@
     <div class="wrap">
         <header>
             <div class="header_inner">
-                <h1 class="logo"><a href="main.html">PETPRO</a></h1>
+                <h1 class="logo"><a href="index.html">PETPRO</a></h1>
                 <div class="right">
                     <nav class="grp_link">
                         <a href="compare01-1.html" id="">펫보험 비교</a>
