--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrap main">
         <header>
             <div class="header_inner">
-                <h1 class="logo"><a href="main.html">PETPRO</a></h1>
+                <h1 class="logo"><a href="index.html">PETPRO</a></h1>
                 <div class="right">
                     <nav class="grp_link">
                         <a href="compare01-1.html" id="">펫보험 비교</a>
@@ -257,23 +257,23 @@
             <article class="box_logo">
                 <ul class="list_logo">
                     <li>
-                        <div class="badge"><img src="resource/images/img_logo01.svg" alt=""></div>
+                        <div class="badge"><img src="resource/images/img_logo01.png" alt=""></div>
                         <p>위풍댕댕</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="resource/images/img_logo02.svg" alt=""></div>
+                        <div class="badge"><img src="resource/images/img_logo02.png" alt=""></div>
                         <p>금쪽같은 펫보험</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="resource/images/img_logo03.svg" alt=""></div>
+                        <div class="badge"><img src="resource/images/img_logo03.png" alt=""></div>
                         <p>펫블리</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="resource/images/img_logo04.svg" alt=""></div>
+                        <div class="badge"><img src="resource/images/img_logo04.png" alt=""></div>
                         <p>하이펫</p>
                     </li>
                     <li>
-                        <div class="badge"><img src="resource/images/img_logo05.svg" alt=""></div>
+                        <div class="badge"><img src="resource/images/img_logo05.png" alt=""></div>
                         <p>펫퍼민트</p>
                     </li>
                 </ul>
