--- a/compare01-1.html
+++ b/compare01-1.html
@@ -22,7 +22,7 @@
                 <h1 class="logo"><a href="index.html">PETPRO</a></h1>
                 <div class="right">
                     <nav class="grp_link">
-                        <a href="compare01-1.html" id="">펫보험 비교</a>
+                        <a href="compare01-1.html" id="" class="on">펫보험 비교</a>
                         <a href="#" id="">보상문의</a>
                         <a href="#" id="">광고파트너</a>
                         <a href="#" id="">사은품</a>
@@ -144,7 +144,7 @@
                                 <a href="#">자세히보기</a>
                             </div>
                         </div>
-                        <button>다음</button>
+                        <button class="btn_cm">다음</button>
                     </div>
                 </div>
             </div>
