--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <a href="#">자세히보기</a>
                             </div>
                         </div>
-                        <button>문의하기</button>
+                        <button class="btn_cm">문의하기</button>
                     </div>
                 </div>
             </div>
