컴플리트 저장

--- a/compare01-3.html
+++ b/compare01-3.html
@@ -96,89 +96,13 @@
                             Nam tincidunt sed consectetur laoreet porta nunc amet. Viverra aenean eu porttitor tortor in. Maecenas id ultricies nunc viverra enim fames vel adipiscing. Sit adipiscing blandit malesuada ut viverra risus viverra montes. Morbi nulla aliquam tortor euismod venenatis leo. Lorem mattis pulvinar gravida netus fermentum diam habitant. Auctor tortor eu accumsan dictum ipsum tellus venenatis nunc. Diam nisl tristique senectus vitae sagittis facilisi vel etiam. </p>
                         <p>Lorem ipsum dolor sit amet consectetur. Feugiat nisi vehicula ultricies tortor scelerisque tristique tortor. Nisl cursus facilisis tellus commodo faucibus. Porta condimentum neque nibh at vel. Pellentesque gravida et vitae ultricies mauris non donec mi est. Quis magna amet viverra auctor ut et justo. Pellentesque enim est lacus vulputate orci feugiat elementum. Ut tristique metus et leo sapien est amet dolor. Lorem porttitor suscipit volutpat viverra leo odio sed eu tellus.</p>
                     </div>
-                    <div class="box_form">
-                        <div class="grp_badge">
-                            <span class="badge">의료실비</span>
-                        </div>
-                        <h2>펫보험 비교하기</h2>
-                        <p class="tit_sub">펫보험을 상세하게 비교해 드릴게요.<br>
-                            우리 아이 정보를 알려주세요.</p>
-                        <div class="grp_form">
-                            <p class="tit">우리 아이가 최근 3개월 이내에 병원을 다녀왔나요?</p>
-                            <div class="grp_radio">
-                                <input type="radio" name="radio01" id="radio01" checked>
-                                <label for="radio01">네</label>
-                                <input type="radio" name="radio01" id="radio02">
-                                <label for="radio02">아니오</label>
-                            </div>
-                        </div>
-                        <div class="grp_form">
-                            <p class="tit">우리 아이가 최근 1년 이내에 수술을 받은적이 있나요?</p>
-                            <div class="grp_radio">
-                                <input type="radio" name="radio02" id="radio03" checked>
-                                <label for="radio03">네</label>
-                                <input type="radio" name="radio02" id="radio04">
-                                <label for="radio04">아니오</label>
-                            </div>
-                        </div>
-                        <div class="grp_form">
-                            <p class="tit">우리 아이가 슬개골 및 고관절 수술을 받은 적이 있나요?</p>
-                            <div class="grp_radio">
-                                <input type="radio" name="radio03" id="radio05" checked>
-                                <label for="radio05">네</label>
-                                <input type="radio" name="radio03" id="radio06">
-                                <label for="radio06">아니오</label>
-                            </div>
-                        </div>
-                        <div class="grp_form">
-                            <p class="txt">질병이력이 있는 친구들은
-                                펫프로 전문 설계사와<br>
-                                상담 후 보험비교를 진행해 드립니다.<br>
-                                원하시는 상담 일자와 시간을 선택해 주세요.</p>
-                        </div>
-                        <div class="grp_form">
-                            <p class="tit">상담방법</p>
-                            <div class="grp_input">
-                                <select name="" id="">
-                                    <option value="">카카오톡</option>
-                                    <option value="">카카오톡2</option>
-                                    <option value="">카카오톡3</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="grp_flex">
-                            <div class="grp_form cal">
-                                <p class="tit">상담일자</p>
-                                <div class="grp_input">
-                                    <div class="grp_cal">
-                                        <input type="text">
-                                        <button></button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="grp_form">
-                                <p class="tit">상담시간</p>
-                                <div class="grp_input">
-                                    <select name="" id="">
-                                        <option value="">오전 10시-12시</option>
-                                        <option value="">오전 10시-12시</option>
-                                        <option value="">오전 10시-12시</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="grp_form check">
-                            <p class="tac">비교 신청하기 내용은 카카오톡 채팅으로 안내드릴게요</p>
-                            <div class="grp_check tac">
-                                <input type="checkbox" name="check01" id="check01">
-                                <label for="check01">개인정보 수집·이용 동의</label>
-                                <a href="#">자세히보기</a>
-                            </div>
-                        </div>
-                        <div class="grp_btn">
-                            <button class="btn_cm gray">이전</button>
-                            <button class="btn_cm">신청하기</button>
-                        </div>
+                    <div class="box_form complate">
+                        <h2>신청 완료</h2>
+                        <p class="txt"><span class="txt_blue">신청이 완료</span>되었습니다.<br>
+                            빠른 시간내에 상담원이 연락드리겠습니다.</p>
+                        <p class="txt_sub">문의하신 내용 확인과 함께<br>
+                            상담완료 시 000 사은품을 드립니다.</p>
+                        <button class="btn_cm">다시 신청하기</button>
                     </div>
                 </div>
             </div>
